update new array

--- a/Day 07 - Array/index.html
+++ b/Day 07 - Array/index.html
@@ -15,7 +15,7 @@
             // let arr = []; // create array via array literal
             // let myarr = new Array(); // create with contructor array
 
-            let arr = ['A', 'B', 'C', 'D'];
+            // let arr = ['A', 'B', 'C', 'D'];
 
             // console.log(arr);
             // console.log(arr[2]);
@@ -34,7 +34,6 @@
                     console.log(myarr[i][j]);
                 }
             }
-
         </script>
     </body>
 
