--- a/Day 10 - Fetch API/index.html
+++ b/Day 10 - Fetch API/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <table border="1">
         <thead>
-            <tr>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Price</th>
-                <th>image</th>
-                <th>Action</th>
-            </tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Price</th>
+            <th>Image</th>
+            <th>Action</th>
         </thead>
         <tbody>
-            <!-- Fetch data from API and dynamically create table rows -->
+
         </tbody>
     </table>
-
+    
 
     <script>
         fetch('https://fakestoreapi.com/products')
-            .then(res => res.json())
-            .then(json => {
-                let tr = '';
-                // console.log(json);
-                json.forEach(item => {
-                    // console.log(item.id,item.title,item.price);
-                    tr+=`<tr>
-                            <td class="id">${item.id}</td>
-                            <td>${item.title}</td>
-                            <td>${item.price}</td>
-                            <td><img src="${item.image}" alt="${item.title}" width="100"></td>
-                            <td><button onclick="getDetail()">View Detail</button></td>
-                        </tr>`;
-                });
-                document.querySelector('tbody').innerHTML = tr;
-            });
+        .then(res=>res.json())
+        .then(json=>{
+            console.log(json);
 
-            function getDetail() {
-                console.lgo(tr.parentElement.parentElement.querySelector('.id').innerHTML);
-                let id = tr.parentElement.parentElement.querySelector('.id').innerHTML;
-            }
+            let tr = '';
+            json.forEach(element => {
+                // console.log(element.id);
+                // console.log(element.title);
+                // console.log(element.price);
+
+                tr += `<tr>
+                    <td class='id'>${element.id}</td>
+                    <td>${element.title}</td>
+                    <td>${element.price}</td>
+                    <td><img src='${element.image}' width='100px' height='100px'></td>
+                    <td><button onclick="getDetail(this)">View Detail</button></td>
+                </tr>`;
+
+                // console.log(tr);
+            });
+            document.querySelector('tbody').innerHTML = tr;
+        })
+
+        function getDetail(tr){
+            console.log(tr.parentElement.parentElement.querySelector('.id').innerHTML);
+            let id = tr.parentElement.parentElement.querySelector('.id').innerHTML;
+            sessionStorage.setItem('itemID', id);
+            location.href = 'http://127.0.0.1:5500/Day%2010%20-%20Fetch%20API/view_detail.html';
+        }
     </script>
 </body>
-
 </html>
