--- a/Day 10 - Fetch API/view_detail.html
+++ b/Day 10 - Fetch API/view_detail.html
@@ -6,22 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button onclick="history.back()">Back</button>
     <h1>View Detail</h1>
     <p id="title"></p>
     <p id="price"></p>
     <p id="description"></p>
     <img id="img">
+
+
     <script>
         console.log(sessionStorage.getItem('itemID'));
 
         let id = sessionStorage.getItem('itemID');
-        fetch('https://fakestoreapi.com/products/1 + id')
-            .then(res=>res.json())
-            .then(json=>{
-                console.log(json);
-                
-            })
+        fetch('https://fakestoreapi.com/products/' + id)
+        .then(res=>res.json())
+        .then(json=>{
+            console.log(json.title);
+            document.getElementById('title').innerHTML = '<b>Title : </b>' + json.title;
+            document.getElementById('price').innerHTML = '<b>Price : </b>' + json.price;
+            document.getElementById('description').innerHTML ='<b>Description : </b>' +  json.description;
+            document.getElementById('img').src = json.image;
+        })
     </script>
 </body>
 </html>
