--- a/Day 10 - Fetch API/index.html
+++ b/Day 10 - Fetch API/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- ! get use for request data from severs or database -->
+    <select name="" id="">
+        <option value="">Desc</option>
+        <option value="">Acs</option>
+    </select>
+
     <table border="1">
         <thead>
             <th>ID</th>
